# Rompecabezas-Genetico

./: README.md
RompecabezasGenetico/: CMakeLists.txt  Genetic.h  Individuos_estructura.h  Individuos_manejador.h  Mutacion.h  Poblacion.h  cincoxcinco.cpp  cuatroxcuatro.cpp  dosxdos.cpp  main.cpp  tresxtres.cpp
RompecabezasGenetico/Images/: FindSFML.cmake
RompecabezasGenetico/cmake_modules/: FindSFML.cmake
